static/css/sass/cdr_ui_styles.scss
/* ... */
.contentarea {
  margin: 20px;
}

.item-title {
  font-size: 36px;
}

.item-actions {
  padding-right: 25px;
}

.full_record_top {
  border-bottom: 1px solid $light-gray;

  .collinfo {
    width: 100%;
  }

  .item-info {
    margin-left: 15px;
  }

  .columns {
    margin-bottom: 0;
  }

  .action-btn {
    padding-right: 50px;
  }

  .bottomline {
    padding: .75rem;
  }
}

.full_record {
  .contentarea {
    margin: 0;
  }

  .contentarea-aggregate {
    .collinfo_metadata {
      margin: 25px;
      width: 100%;
    }
  }

  div:has(#streaming-player) {
    padding: 5px 0 15px 0;
  }
}

.full_record_bottom {
  padding-top: 30px;
  background-color: white;
}

/*@TODO remove breadcrumb css one full record page is converted to Vue */
#full_record_trail {
  border: 1px solid #E0E0E0;
  background-color: #E0E0E0;
  border-radius: 5px;
  font-size: 18px;
  line-height: 1.2;
  margin: 0 auto 25px auto;
  padding: 20px;
  text-indent: 0;
  width: 100%;

  a {
    color: $container-blue;
  }
}

#expand-breadcrumb {
  font-size: 24px;
}

.actionlink {
  a {
    color: white;
  }
}

.actionlink.view {
  max-width: 60px;

  a {
    margin: auto;
  }
}

table.dataTable {
  tbody {
    tr.odd {
      background-color: #E1E8FF;
    }
  }
}

.dataTables_wrapper .dataTables_paginate .paginate_button.current,
.dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
  border-radius: 5px;
}

.is-narrow.item-actions {
  text-align: right;

  .actionlink {
    margin-bottom: 0;
  }
}

.item-actions {
  .actionlink {
    a.action {
      font-size: 16px;
      padding: 15px;
    }
  }
}

.content-wrap.full_record,
#is-admin-unit {
  .restricted-access {
    border: 1px solid;
    border-radius: 5px;
    padding: 15px;

    .button {
      text-align: left;
    }

    h2 {
      font-size: 1rem;
    }

    .actionlink {
      margin-bottom: 8px;
    }
  }
}

.collinfo_metadata {
  margin: 0 0 20px 0;

  h2 {
    font-size: 24px;
  }

  ul {
    font-size: 16px;
  }
}

#child-files {
  border: $border-style;
  border-collapse: collapse;
  width: 100%;
  word-wrap: break-word;

  thead {
    font-weight: bold;
  }

  th {
    border: $border-style;
  }

  tr.deleted {
    display: table-row;

    a {
      color: #8CB4C6;
    }
  }

  td {
    border-left: $border-style;
    border-right: $border-style;
  }

  th, td {
    text-align: center;
    vertical-align: middle;
  }

  .thumbnail-badge {
    font-size: 10px;
    margin-left: 15px !important;
    margin-top: -15px !important;

    .fa-trash, .fa-lock {
      left: 0;
      top: 0;
    }
  }
}

#is-folder {
  .is-12 {
    padding-top: 0;
  }
}

.columns-resize {
  padding-left: 25px;

  .is-10 {
    padding-left: 25px;
  }
}

.aggregate-info {
  padding-left: 0;

  .thumbnail-preview {
    padding-left: 15px;
  }
}

.pipe_list {
  margin-bottom: 10px;
}

/* MODs display for work and file pages, plus modalMetadata.vue component */
#mods_data_display {
  margin: auto;
  padding: 0 25px;
  width: auto;

  table {
    border: 1px solid #F0F0F0;
    font-size: 16px;
    margin: 25px auto 25px 25px;
    width: 97%;

    p {
      margin-bottom: 0;
    }

    th, td {
      padding: 10px;
    }

    th {
      background-color: #F0F0F0;
      vertical-align: top;
      width: 25%;
    }

    td {
      vertical-align: middle;
      width: 75%;

      table {
        margin: 0;
      }
    }
  }
}

.relateditem {
  .thumbnail {
    .thumbnail-badge {
      right: 40px;
    }

    .thumbnail-viewer {
      margin: auto;
    }
  }
}

/* Service unavailable/maintenance pages */
.darkest {
  .unavailable-header {
    width: 30%;
  }

  a {
    color: white;

    &:hover {
      color: #E8E8E8;
    }
  }
}

/* Bulma overrides */
.select {
  margin-bottom: 15px;
}

.actionlink {
  display: inline-flex;
}

.button.is-link.is-hovered,
.button.is-link:hover {
  background-color: #276cda;
  border-color: transparent;
  color: #fff;
}

.navbar-link.is-active,
.navbar-link:hover,
a.navbar-item.is-active,
a.navbar-item:hover {
  background-color: #fafafa;
  color: #3273dc;
}

/*** End of Bulma overrides ***/

/* Following Bulma breakpoints */
@media screen and (max-width: 1215px) {
  .collection-browse {
    .browseitem {
      margin: 10px auto;
      width: 100%;
    }
  }
}

@media screen and (max-width: 1172px){
  .browse-header {
    .read-more {
      margin-left: 25px;
    }
  }
}

@media screen and (max-width: 1024px) {
  .bottomline {
    display: block;

    p {
      width: 100%;
    }
  }

  .actionlink {
    margin-bottom: 1px;
  }

  .pipe_list {
    margin-left: 15px;
  }

  .select.is-medium {
    font-size: 1.05rem;
  }

  #child-files_wrapper {
    overflow-x: scroll;
  }

  .collection-info-bottom {
    margin: 0 25px 25px 25px;
  }
}
/* ... */

